footer fix on iphone 5 - found and got rid of conflicting css

--- a/app/assets/stylesheets/components/_game-card.scss
+++ b/app/assets/stylesheets/components/_game-card.scss
@@ -104,12 +104,6 @@
   padding: 0 4px;
 }
 
-.games-page {
-  display: flex;
-  justify-content: space-around;
-  position: static;
-}
-
 .h2-game-title {
   height: 100%;
   padding: 0 4px;
